WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187527
REGRESSION (
r230163
): Videos cannot be seen full screen in Complete Anatomy app
https://bugs.webkit.org/show_bug.cgi?id=187527
Summary
REGRESSION (r230163): Videos cannot be seen full screen in Complete Anatomy app
Jer Noble
Reported
2018-07-10 10:48:34 PDT
REGRESSION (
r230163
): Videos cannot be seen full screen in Complete Anatomy app
Attachments
Patch
(2.42 KB, patch)
2018-07-10 10:51 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(9.37 KB, patch)
2018-07-10 13:51 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-07-10 10:49:22 PDT
<
rdar://problem/40511527
>
Jer Noble
Comment 2
2018-07-10 10:51:22 PDT
Created
attachment 344709
[details]
Patch
Jer Noble
Comment 3
2018-07-10 13:51:30 PDT
Created
attachment 344720
[details]
Patch
WebKit Commit Bot
Comment 4
2018-07-12 10:03:48 PDT
Comment on
attachment 344720
[details]
Patch Clearing flags on attachment: 344720 Committed
r233771
: <
https://trac.webkit.org/changeset/233771
>
WebKit Commit Bot
Comment 5
2018-07-12 10:03:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug