Source/WebKit/UIProcess/API/APIExperimentalFeature.h
@@ -33,21 +33,23 @@ namespace API {
 
 class ExperimentalFeature final : public ObjectImpl<Object::Type::ExperimentalFeature> {
 public:
-    static Ref<ExperimentalFeature> create(const WTF::String& name, const WTF::String& key, const WTF::String& details, bool defaultValue);
+    static Ref<ExperimentalFeature> create(const WTF::String& name, const WTF::String& key, const WTF::String& details, bool defaultValue, bool hidden);
     virtual ~ExperimentalFeature();
 
     WTF::String name() const { return m_name; }
     WTF::String key() const { return m_key; }
     WTF::String details() const { return m_details; }
     bool defaultValue() const { return m_defaultValue; }
+    bool isHidden() const { return m_hidden; }
 
 private:
-    explicit ExperimentalFeature(const WTF::String& name, const WTF::String& key, const WTF::String& details, bool defaultValue);
+    explicit ExperimentalFeature(const WTF::String& name, const WTF::String& key, const WTF::String& details, bool defaultValue, bool hidden);
 
     WTF::String m_name;
     WTF::String m_key;
     WTF::String m_details;
     bool m_defaultValue;
+    bool m_hidden;
 };
 
 }
